--- a/web/index.html
+++ b/web/index.html
@@ -16,7 +16,8 @@
             "core/": "./modules/core/",
             "data/": "./modules/data/",
             "tts/": "./modules/tts/",
-            "ui/": "./modules/ui/"
+            "ui/": "./modules/ui/",
+            "libs/": "./libs/"
         }
     }
     </script>
