Add new styles for forms, modals, segments, typography, and layout components
- Introduced form styles in _forms.css for better input handling and layout.
- Created _modal.css for modal styling, including transitions and visibility controls.
- Added segment styles in _segments.css to enhance segment presentation and interaction.
- Developed typography styles in _typography.css for consistent text formatting across components.
- Established layout styles in _container.css, _footer_controls.css, _header.css, and _sidebar.css for improved structure and responsiveness.
- Implemented responsive design adjustments in _responsive.css for better mobile compatibility.
- Refactored main style.css to utilize modular CSS imports for better organization and maintainability.
- Updated index.html to integrate new global controls and remove deprecated elements.
- Enhanced TTSPlayer and content rendering logic for improved text normalization and segment handling.

--- a/web/index.html
+++ b/web/index.html
@@ -34,9 +34,6 @@
 
     <div class="container">
         <header>
-            <div class="top-controls">
-                <button id="settings-btn" class="icon-btn" title="Cài đặt"><i class="fas fa-cog"></i></button>
-            </div>
             <h1>Giới bổn Tỳ kheo</h1>
             <p class="subtitle">Pātimokkha Bhikkhu</p>
         </header>
@@ -68,6 +65,8 @@
         </div>
 
         <div class="global-controls">
+            <button id="settings-btn" class="icon-btn control-btn" title="Cài đặt"><i class="fas fa-cog"></i></button>
+            <div class="divider"></div>
             <button id="play-all-btn" class="btn primary"><i class="fas fa-play"></i> Đọc tất cả</button>
             <button id="pause-btn" class="btn secondary" disabled><i class="fas fa-pause"></i> Tạm dừng</button>
             <button id="stop-btn" class="btn secondary" disabled><i class="fas fa-stop"></i> Dừng</button>
@@ -76,10 +75,6 @@
         <main id="content">
             <div class="loading">Đang tải dữ liệu...</div>
         </main>
-
-        <footer>
-            <p>Phật Giáo Nguyên Thủy Theravāda</p>
-        </footer>
     </div>
 
     <script type="module" src="modules/main.js"></script>
