--- a/web/index.html
+++ b/web/index.html
@@ -56,20 +56,25 @@
                         <button id="refresh-voices-btn" class="icon-btn" title="Tải lại danh sách giọng"><i class="fas fa-sync-alt"></i></button>
                     </div>
                 </div>
-                <div class="form-group">
-                    <label for="speed-range">Tốc độ đọc: <span id="speed-value">1.0</span>x</label>
-                    <input type="range" id="speed-range" min="0.5" max="2.0" step="0.1" value="1.0">
-                </div>
                 <button id="save-settings" class="btn primary">Lưu</button>
             </div>
         </div>
 
         <div class="global-controls">
-            <button id="settings-btn" class="icon-btn control-btn" title="Cài đặt"><i class="fas fa-cog"></i></button>
+            <button id="play-all-btn" class="btn primary" title="Đọc tất cả"><i class="fas fa-play"></i></button>
+            <button id="pause-btn" class="btn secondary" disabled title="Tạm dừng"><i class="fas fa-pause"></i></button>
+            <button id="stop-btn" class="btn secondary" disabled title="Dừng"><i class="fas fa-stop"></i></button>
             <div class="divider"></div>
-            <button id="play-all-btn" class="btn primary"><i class="fas fa-play"></i> Đọc tất cả</button>
-            <button id="pause-btn" class="btn secondary" disabled><i class="fas fa-pause"></i> Tạm dừng</button>
-            <button id="stop-btn" class="btn secondary" disabled><i class="fas fa-stop"></i> Dừng</button>
+            <select id="speed-select" class="control-select" title="Tốc độ đọc">
+                <option value="0.5">0.5x</option>
+                <option value="0.75">0.75x</option>
+                <option value="1.0">1.0x</option>
+                <option value="1.25" selected>1.25x</option>
+                <option value="1.5">1.5x</option>
+                <option value="1.75">1.75x</option>
+                <option value="2.0">2.0x</option>
+            </select>
+            <button id="settings-btn" class="icon-btn control-btn" title="Cài đặt"><i class="fas fa-cog"></i></button>
         </div>
 
         <main id="content">
