feat(ui, tts): add loop toggle functionality for single segment and rule sequence playback

--- a/web/index.html
+++ b/web/index.html
@@ -29,8 +29,7 @@
     <aside id="sidebar">
         <div class="toc-header">Mục lục</div>
         <ul id="toc-list" class="toc-list">
-            <!-- TOC items will be generated here -->
-        </ul>
+            </ul>
     </aside>
 
     <div class="container">
@@ -77,6 +76,7 @@
                 <option value="1.75">1.75x</option>
                 <option value="2.0">2.0x</option>
             </select>
+            <button id="loop-btn" class="icon-btn control-btn" title="Lặp lại"><i class="fas fa-redo"></i></button>
             <button id="settings-btn" class="icon-btn control-btn" title="Cài đặt"><i class="fas fa-cog"></i></button>
         </div>
 
@@ -88,3 +88,4 @@
     <script type="module" src="modules/main.js"></script>
 </body>
 </html>
+
