--- a/web/index.html
+++ b/web/index.html
@@ -36,6 +36,65 @@
         <header>
             <h1>Giới bổn Tỳ kheo</h1>
             <p class="subtitle">Pātimokkha Bhikkhu</p>
+
+            <div id="filter-container">
+                <button id="btn-toggle-drawer" class="icon-trigger" title="Cài đặt hiển thị">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="transform: rotate(180deg); transform-origin: center">
+                        <path d="M6 15l6-6 6 6" />
+                    </svg>
+                </button>
+
+                <div id="filter-drawer" class="hidden">
+                    <div id="drawer-footer">
+                        <div class="zoom-widget">
+                            <button id="btn-font-decrease" class="icon-only-btn" title="Giảm cỡ chữ">
+                                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                    <line x1="5" y1="12" x2="19" y2="12"></line>
+                                </svg>
+                            </button>
+                            <span id="font-size-label" class="zoom-label" title="Đặt lại cỡ chữ">Aa</span>
+                            <button id="btn-font-increase" class="icon-only-btn" title="Tăng cỡ chữ">
+                                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                    <line x1="12" y1="5" x2="12" y2="19"></line>
+                                    <line x1="5" y1="12" x2="19" y2="12"></line>
+                                </svg>
+                            </button>
+                        </div>
+
+                        <!-- Spacer -->
+                        <div></div>
+
+                        <div class="theme-toggle-group">
+                            <div id="sepia-control-panel" class="hidden">
+                                <input type="range" id="sepia-slider" min="0" max="100" value="0" step="1" title="Điều chỉnh độ ám vàng">
+                            </div>
+
+                            <button id="btn-theme-toggle" title="Đổi giao diện (Sáng/Tối)">
+                                <span class="icon-moon">
+                                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                        <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path>
+                                    </svg>
+                                </span>
+                                <span class="icon-sun hidden">
+                                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                        <circle cx="12" cy="12" r="5"></circle>
+                                        <line x1="12" y1="1" x2="12" y2="3"></line>
+                                        <line x1="12" y1="21" x2="12" y2="23"></line>
+                                        <line x1="4.22" y1="4.22" x2="5.64" y2="5.64"></line>
+                                        <line x1="18.36" y1="18.36" x2="19.78" y2="19.78"></line>
+                                        <line x1="1" y1="12" x2="3" y2="12"></line>
+                                        <line x1="21" y1="12" x2="23" y2="12"></line>
+                                        <line x1="4.22" y1="19.78" x2="5.64" y2="18.36"></line>
+                                        <line x1="18.36" y1="5.64" x2="19.78" y2="4.22"></line>
+                                    </svg>
+                                </span>
+                            </button>
+
+                            <button id="btn-sepia-indicator" class="text-btn sepia-indicator" title="Độ ám vàng">0%</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </header>
 
         <div id="settings-modal" class="modal hidden">
