--- a/web/index.html
+++ b/web/index.html
@@ -53,8 +53,10 @@
                             </button>
                         </div>
                         
-                        <button id="btn-clear-cache" class="btn-clear-cache-subtle" title="Tải lại dữ liệu">
-                            Cập nhật dữ liệu
+                        <button id="btn-clear-cache" class="icon-trigger" title="Cập nhật dữ liệu mới">
+                            <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <path d="M21.5 2v6h-6M2.5 22v-6h6M2 11.5a10 10 0 0 1 18.8-4.3M22 12.5a10 10 0 0 1-18.8 4.2"/>
+                            </svg>
                         </button>
                         
                         <div class="theme-toggle-group">
