style(ui): refactor sidebar toggle button to a minimalist ghost design without background

--- a/web/index.html
+++ b/web/index.html
@@ -16,7 +16,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="assets/icons/favicon-16x16.png">
 </head>
 <body>
-    <button id="sidebar-toggle" class="icon-btn"><i class="fas fa-bars"></i></button>
+    <button id="sidebar-toggle" title="Mục lục"><i class="fas fa-bars"></i></button>
 
     <aside id="sidebar">
         <div class="toc-header">Mục lục</div>
@@ -151,4 +151,3 @@
     <script type="module" src="modules/main.js"></script>
 </body>
 </html>
-
