--- a/web/index.html
+++ b/web/index.html
@@ -10,6 +10,20 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Merriweather:ital,wght@0,300;0,400;0,700;1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     
+    <script type="importmap">
+    {
+        "imports": {
+            "core/": "./modules/core/",
+            "services/": "./modules/services/",
+            "utils/": "./utils/",
+            "ui/": "./modules/ui/",
+            "tts/": "./modules/tts/",
+            "data/": "./modules/data/",
+            "libs/": "./libs/"
+        }
+    }
+    </script>
+
     <link rel="icon" type="image/x-icon" href="assets/icons/favicon.ico">
     <link rel="apple-touch-icon" href="assets/icons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/favicon-32x32.png">
