feat: add mock PWA registration for local testing and update import map

--- a/web/index.html
+++ b/web/index.html
@@ -19,7 +19,8 @@
             "ui/": "./modules/ui/",
             "tts/": "./modules/tts/",
             "data/": "./modules/data/",
-            "libs/": "./libs/"
+            "libs/": "./libs/",
+            "virtual:pwa-register": "./utils/pwa_mock.js"
         }
     }
     </script>
