--- a/web/index.html
+++ b/web/index.html
@@ -63,13 +63,19 @@
                         </button>
                     </div>
     
-                    <button id="btn-clear-cache" class="icon-only-btn" title="Cập nhật dữ liệu mới">
-                        <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                            <path d="M21.5 2v6h-6M2.5 22v-6h6M2 11.5a10 10 0 0 1 18.8-4.3M22 12.5a10 10 0 0 1-18.8 4.2"/>
-                        </svg>
-                    </button>
-                        
-                    <div class="theme-toggle-group">
+                                                    <div class="maintenance-group">
+                                                        <button id="btn-clear-cache" class="icon-only-btn" title="Xóa toàn bộ dữ liệu & cache">
+                                                            <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                                                <polyline points="3 6 5 6 21 6"></polyline>
+                                                                <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path>
+                                                            </svg>
+                                                        </button>
+                                                        <button id="btn-update-app" class="icon-only-btn" title="Kiểm tra & Cập nhật">
+                                                            <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                                                <path d="M21.5 2v6h-6M2.5 22v-6h6M2 11.5a10 10 0 0 1 18.8-4.3M22 12.5a10 10 0 0 1-18.8 4.2"/>
+                                                            </svg>
+                                                        </button>
+                                                    </div>                    <div class="theme-toggle-group">
                         <div id="sepia-control-panel" class="hidden">
                             <input type="range" id="sepia-slider" min="0" max="100" value="0" step="1" title="Điều chỉnh độ ám vàng">
                         </div>
