--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         }
     }
     </script>
-  <script type="module" crossorigin src="/gioibon/assets/index.H80t8lkA.js"></script>
+  <script type="module" crossorigin src="/gioibon/assets/index.BotBl4pe.js"></script>
   <link rel="modulepreload" crossorigin href="/gioibon/assets/vendor-sqlite.CXrIRBlc.js">
   <link rel="stylesheet" crossorigin href="/gioibon/assets/index.CmvNordM.css">
 <link rel="manifest" href="/gioibon/manifest.webmanifest"></head>
