--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         }
     }
     </script>
-  <script type="module" crossorigin src="/gioibon/assets/index.BotBl4pe.js"></script>
+  <script type="module" crossorigin src="/gioibon/assets/index.C7_4u99a.js"></script>
   <link rel="modulepreload" crossorigin href="/gioibon/assets/vendor-sqlite.CXrIRBlc.js">
-  <link rel="stylesheet" crossorigin href="/gioibon/assets/index.CmvNordM.css">
+  <link rel="stylesheet" crossorigin href="/gioibon/assets/index.Bwvx-9G7.css">
 <link rel="manifest" href="/gioibon/manifest.webmanifest"></head>
 <body>
     <button id="sidebar-toggle" name="sidebar-toggle" title="Mục lục"><i class="fas fa-bars"></i></button>
