fix(pwa): remove conflicting importmap and add debug logging for SW registration
- Remove 'virtual:pwa-register' from importmap in index.html to avoid conflicts with vite-plugin-pwa.
- Add console logs in setupPWA to verify execution flow.

--- a/web/index.html
+++ b/web/index.html
@@ -19,8 +19,7 @@
             "ui/": "./modules/ui/",
             "tts/": "./modules/tts/",
             "data/": "./modules/data/",
-            "libs/": "./libs/",
-            "virtual:pwa-register": "./utils/pwa_mock.js"
+            "libs/": "./libs/"
         }
     }
     </script>
