--- a/web/index.html
+++ b/web/index.html
@@ -38,7 +38,7 @@
             <ul id="toc-list" class="toc-list">
             </ul>
         </aside>
-    
+  
         <button id="btn-toggle-drawer" name="btn-toggle-drawer" class="icon-trigger" title="Cài đặt hiển thị">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="transform: rotate(180deg); transform-origin: center">
                 <path d="M6 15l6-6 6 6" />
@@ -67,7 +67,7 @@
                         <button id="btn-clear-cache" name="btn-clear-cache" class="icon-only-btn" title="Xóa toàn bộ dữ liệu & cache">
                             <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                 <polyline points="3 6 5 6 21 6"></polyline>
-                                <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path>
+                                <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2 2v2"></path>
                             </svg>
                         </button>
                         <button id="btn-update-app" name="btn-update-app" class="icon-only-btn" title="Kiểm tra & Cập nhật">
@@ -110,7 +110,6 @@
         <div class="container">
             <header>
                 <h1>Giới bổn Tỳ kheo</h1>
-                
                 <p class="subtitle">Pātimokkha Bhikkhu</p>
             </header>
         <div id="settings-modal" class="modal hidden">
@@ -171,6 +170,8 @@
             <button id="pwa-close" name="pwa-close" class="btn-secondary">Đóng</button>
         </div>
     </div>
+
+    <script src="libs/jszip/jszip.min.js"></script>
 
     <script type="module" src="modules/main.js"></script>
     <div id="sepia-overlay"></div>
