--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         }
     }
     </script>
-  <script type="module" crossorigin src="/gioibon/assets/index.CDedjlxu.js"></script>
+  <script type="module" crossorigin src="/gioibon/assets/index.BsyizLwN.js"></script>
   <link rel="modulepreload" crossorigin href="/gioibon/assets/vendor-sqlite.CMSgUCi5.js">
   <link rel="stylesheet" crossorigin href="/gioibon/assets/index.Bwvx-9G7.css">
 <link rel="manifest" href="/gioibon/manifest.webmanifest"></head>
@@ -41,7 +41,7 @@
             <ul id="toc-list" class="toc-list">
             </ul>
         </aside>
-    
+  
         <button id="btn-toggle-drawer" name="btn-toggle-drawer" class="icon-trigger" title="Cài đặt hiển thị">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="transform: rotate(180deg); transform-origin: center">
                 <path d="M6 15l6-6 6 6" />
@@ -70,7 +70,7 @@
                         <button id="btn-clear-cache" name="btn-clear-cache" class="icon-only-btn" title="Xóa toàn bộ dữ liệu & cache">
                             <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                 <polyline points="3 6 5 6 21 6"></polyline>
-                                <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path>
+                                <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2 2v2"></path>
                             </svg>
                         </button>
                         <button id="btn-update-app" name="btn-update-app" class="icon-only-btn" title="Kiểm tra & Cập nhật">
@@ -113,7 +113,6 @@
         <div class="container">
             <header>
                 <h1>Giới bổn Tỳ kheo</h1>
-                
                 <p class="subtitle">Pātimokkha Bhikkhu</p>
             </header>
         <div id="settings-modal" class="modal hidden">
@@ -174,6 +173,8 @@
             <button id="pwa-close" name="pwa-close" class="btn-secondary">Đóng</button>
         </div>
     </div>
+
+    <script src="libs/jszip/jszip.min.js"></script>
 
     <div id="sepia-overlay"></div>
 </body>
