--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         }
     }
     </script>
-  <script type="module" crossorigin src="/gioibon/assets/index.BsyizLwN.js"></script>
-  <link rel="modulepreload" crossorigin href="/gioibon/assets/vendor-sqlite.CMSgUCi5.js">
+  <script type="module" crossorigin src="/gioibon/assets/index.sWneeV40.js"></script>
+  <link rel="modulepreload" crossorigin href="/gioibon/assets/vendor-sqlite.B5d0IBhS.js">
   <link rel="stylesheet" crossorigin href="/gioibon/assets/index.Bwvx-9G7.css">
 <link rel="manifest" href="/gioibon/manifest.webmanifest"></head>
 <body>
