--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         }
     }
     </script>
-  <script type="module" crossorigin src="/gioibon/assets/index.sWneeV40.js"></script>
+  <script type="module" crossorigin src="/gioibon/assets/index.CLF2Ter6.js"></script>
   <link rel="modulepreload" crossorigin href="/gioibon/assets/vendor-sqlite.B5d0IBhS.js">
   <link rel="stylesheet" crossorigin href="/gioibon/assets/index.Bwvx-9G7.css">
 <link rel="manifest" href="/gioibon/manifest.webmanifest"></head>
