Fix: Bổ sung PWA meta tags đặc thù của Apple để iOS có thể chạy offline

--- a/web/index.html
+++ b/web/index.html
@@ -2,7 +2,14 @@
 <html lang="vi">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <meta name="apple-mobile-web-app-title" content="Giới Bổn">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="theme-color" content="#fdfbf7">
+
     <title>Giới bổn Tỳ kheo - Pātimokkha Bhikkhu</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -48,6 +55,7 @@
         <div id="control-bar">
             <div id="control-drawer" class="hidden">
                 <div id="drawer-footer">
+          
                     <div class="zoom-widget">
                         <button id="btn-font-decrease" name="btn-font-decrease" class="icon-only-btn" title="Giảm cỡ chữ">
                             <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -55,6 +63,7 @@
                             </svg>
                         </button>
                         <span id="font-size-label" class="zoom-label" title="Đặt lại cỡ chữ">Aa</span>
+  
                         <button id="btn-font-increase" name="btn-font-increase" class="icon-only-btn" title="Tăng cỡ chữ">
                             <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                 <line x1="12" y1="5" x2="12" y2="19"></line>
