--- a/web/index.html
+++ b/web/index.html
@@ -11,6 +11,10 @@
     <meta name="theme-color" content="#fdfbf7">
 
     <title>Giới bổn Tỳ kheo - Pātimokkha Bhikkhu</title>
+    
+    <link rel="preload" href="assets/fonts/noto-sans-mono/noto-sans-mono-vietnamese.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="assets/fonts/noto-sans-mono/noto-sans-mono-latin.woff2" as="font" type="font/woff2" crossorigin>
+
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
