--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <meta name="theme-color" content="#fdfbf7">
 
     <title>Giới bổn Tỳ kheo - Pātimokkha Bhikkhu</title>
+    
+    <link rel="preload" href="assets/fonts/noto-sans-mono/noto-sans-mono-pali-viet.woff2" as="font" type="font/woff2" crossorigin>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Merriweather:ital,wght@0,300;0,400;0,700;1,300&display=swap" rel="stylesheet">
@@ -36,9 +39,9 @@
         }
     }
     </script>
-  <script type="module" crossorigin src="/gioibon/assets/index.U312bxa_.js"></script>
+  <script type="module" crossorigin src="/gioibon/assets/index.DbOxy5Cl.js"></script>
   <link rel="modulepreload" crossorigin href="/gioibon/assets/vendor-sqlite.B5d0IBhS.js">
-  <link rel="stylesheet" crossorigin href="/gioibon/assets/index.Bwvx-9G7.css">
+  <link rel="stylesheet" crossorigin href="/gioibon/assets/index.C3y3BNIJ.css">
 <link rel="manifest" href="/gioibon/manifest.webmanifest"></head>
 <body>
     <button id="sidebar-toggle" name="sidebar-toggle" title="Mục lục"><i class="fas fa-bars"></i></button>
