feat(ui): add professional splash screen for application initialization

--- a/web/index.html
+++ b/web/index.html
@@ -41,6 +41,12 @@
     <link rel="icon" type="image/png" sizes="16x16" href="assets/icons/favicon-16x16.png">
 </head>
 <body>
+    <div id="splash-screen">
+        <div class="splash-spinner"></div>
+        <div class="splash-title">Giới Bổn Tỳ Kheo</div>
+        <div class="splash-subtitle">Đang khởi tạo ứng dụng...</div>
+    </div>
+
     <button id="sidebar-toggle" name="sidebar-toggle" title="Mục lục"><i class="fas fa-bars"></i></button>
 
         <aside id="sidebar">
@@ -171,8 +177,7 @@
         </div>
 
         <main id="content">
-            <div class="loading">Đang tải dữ liệu...</div>
-        </main>
+            </main>
     </div>
 
     <div id="pwa-toast" class="pwa-toast hidden">
