style(splash): apply minimalist design by removing title and slimming progress bar

--- a/web/index.html
+++ b/web/index.html
@@ -42,8 +42,9 @@
 </head>
 <body>
     <div id="splash-screen">
-        <div class="splash-spinner"></div>
-        <div class="splash-title">Giới Bổn Tỳ Kheo</div>
+        <div class="splash-progress-container">
+            <div class="splash-progress-bar"></div>
+        </div>
         <div class="splash-subtitle">Đang khởi tạo ứng dụng...</div>
     </div>
 
@@ -177,7 +178,7 @@
         </div>
 
         <main id="content">
-            </main>
+        </main>
     </div>
 
     <div id="pwa-toast" class="pwa-toast hidden">
