--- a/index.html
+++ b/index.html
@@ -39,11 +39,18 @@
         }
     }
     </script>
-  <script type="module" crossorigin src="/gioibon/assets/index.BPR7FeB9.js"></script>
+  <script type="module" crossorigin src="/gioibon/assets/index.CoP86ebm.js"></script>
   <link rel="modulepreload" crossorigin href="/gioibon/assets/vendor-sqlite.B5d0IBhS.js">
-  <link rel="stylesheet" crossorigin href="/gioibon/assets/index.C3y3BNIJ.css">
+  <link rel="stylesheet" crossorigin href="/gioibon/assets/index.C2zox5A6.css">
 <link rel="manifest" href="/gioibon/manifest.webmanifest"></head>
 <body>
+    <div id="splash-screen">
+        <div class="splash-progress-container">
+            <div class="splash-progress-bar"></div>
+        </div>
+        <div class="splash-subtitle">Đang khởi tạo ứng dụng...</div>
+    </div>
+
     <button id="sidebar-toggle" name="sidebar-toggle" title="Mục lục"><i class="fas fa-bars"></i></button>
 
         <aside id="sidebar">
@@ -174,7 +181,6 @@
         </div>
 
         <main id="content">
-            <div class="loading">Đang tải dữ liệu...</div>
         </main>
     </div>
 
