--- a/web/index.html
+++ b/web/index.html
@@ -85,8 +85,11 @@
                     <div class="maintenance-group">
                         <button id="btn-clear-cache" name="btn-clear-cache" class="icon-only-btn" title="Xóa toàn bộ dữ liệu & cache">
                             <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                <polyline points="3 6 5 6 21 6"></polyline>
-                                <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2 2v2"></path>
+                                <path d="M3 6h18"></path>
+                                <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"></path>
+                                <path d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path>
+                                <line x1="10" y1="11" x2="10" y2="17"></line>
+                                <line x1="14" y1="11" x2="14" y2="17"></line>
                             </svg>
                         </button>
                         <button id="btn-update-app" name="btn-update-app" class="icon-only-btn" title="Kiểm tra & Cập nhật">
