--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         }
     }
     </script>
-  <script type="module" crossorigin src="/gioibon/assets/index.CQ7CWQW7.js"></script>
+  <script type="module" crossorigin src="/gioibon/assets/index.DnTllJkb.js"></script>
   <link rel="modulepreload" crossorigin href="/gioibon/assets/vendor-sqlite.B5d0IBhS.js">
   <link rel="stylesheet" crossorigin href="/gioibon/assets/index.C2zox5A6.css">
 <link rel="manifest" href="/gioibon/manifest.webmanifest"></head>
