--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
         }
     }
     </script>
-  <script type="module" crossorigin src="/gioibon/assets/index.DnTllJkb.js"></script>
+  <script type="module" crossorigin src="/gioibon/assets/index.DRO0sCWd.js"></script>
   <link rel="modulepreload" crossorigin href="/gioibon/assets/vendor-sqlite.B5d0IBhS.js">
-  <link rel="stylesheet" crossorigin href="/gioibon/assets/index.C2zox5A6.css">
+  <link rel="stylesheet" crossorigin href="/gioibon/assets/index.CY1xLu_j.css">
 <link rel="manifest" href="/gioibon/manifest.webmanifest"></head>
 <body>
     <div id="splash-screen">
